--- a/shortcodes/widgets/hotels.yaml
+++ b/shortcodes/widgets/hotels.yaml
@@ -10,7 +10,7 @@ paths:
         200:
           description: "Получаем аттрибуты формы с данными"
           schema:
-            $ref: '#/models/tp_widget_hotels_selections_discount_shortcodes'
+            $ref: '#/models/properties/tp_widget_hotels_selections_discount_shortcodes'
     put: &widgetPutResponse
       tags: *widgetHotelTags
       description: 'Сохраняем данные'
@@ -29,7 +29,7 @@ paths:
         200:
           description: "Восстанавливаем значения к первоначальным, вызывается по нажатию кнопки reset"
           schema:
-            $ref: '#/models/tp_widget_hotels_selections_discount_shortcodes'
+            $ref: '#/models/properties/tp_widget_hotels_selections_discount_shortcodes'
   tp_hotels_selections_date_widget:
     get:
       description: "Подборки отелей на даты. Интерактивная карта со схемой рейсов из указанного или автоматически
@@ -39,7 +39,7 @@ paths:
         200:
           description: "Получаем аттрибуты формы с данными"
           schema:
-            $ref: '#/models/tp_widget_hotels_selections_date_shortcodes'
+            $ref: '#/models/properties/tp_widget_hotels_selections_date_shortcodes'
     put: *widgetPutResponse
     delete:
       tags: *widgetHotelTags
@@ -47,112 +47,114 @@ paths:
         200:
           description: "Восстанавливаем значения к первоначальным, вызывается по нажатию кнопки reset"
           schema:
-            $ref: '#/models/tp_widget_hotels_selections_date_shortcodes'
+            $ref: '#/models/properties/tp_widget_hotels_selections_date_shortcodes'
 models:
-  # отели
-  tp_widget_hotels_selections_discount_shortcodes:
-    type: "object"
-    properties:
-      title:
-        allOf:
-          - $ref: '../../variables.yaml#/$headerText'
-          - default: "Цены на авиабилеты в одну сторону из %{origin} в %{destination}, на ближайшее"
-      title_tag:
-        $ref: '../../variables.yaml#/$title_tags'
-      columns:
-        allOf:
-          - $ref: '../../variables.yaml#/$shortcode_columns'
-          - enum:
-              - "Цена за ночь, от"
-              - "Старая цена и скидка"
-              - "До центра"
-              - "Цена до скидки"
-              - "Рейтинг"
-              - "Отель"
-              - "Звездность"
-              - "Скидка"
-              - "Старая и новая цена"
-              - "Кнопка"
-      button_text:
-        allOf:
-          - $ref: '../../variables.yaml#/$button_text'
-          - default: "Посмотреть отель"
-      assign_dates:
-        allOf:
-          - $ref: '../../variables.yaml#/$assign_dates'
-          - default: false
-      sort_by:
-        allOf:
-          - $ref: '../../variables.yaml#/$sort_by'
-          - enum:
-              - "Старая и новая цена"
-              - "Дата возвращения"
-              - "Пересадки"
-              - "Номер рейса"
-              - "Рейс"
-              - "Стоимость"
-      use_pagination:
-        allOf:
-          - $ref: '../../variables.yaml#/$use_pagination'
-          - default: false
-      pagination_size:
-        allOf:
-          - $ref: '../../variables.yaml#/$pagination_size'
-          - default: "10"
-      additional_marker:
-        allOf:
-          - $ref: '../../variables.yaml#/$additionalMarker'
-          - default: "hotelsSelections"
-      apply_to_all_tables:
-        allOf:
-          - $ref: '../../variables.yaml#/$apply_to_all_tables'
-          - default: false
-  tp_widget_hotels_selections_date_shortcodes:
-    type: "object"
-    properties:
-      title:
-        allOf:
-          - $ref: '../../variables.yaml#/$headerText'
-          - default: "Цены на авиабилеты в одну сторону из %{origin} в %{destination}, на ближайшее"
-      title_tag:
-        $ref: '../../variables.yaml#/$title_tags'
-      columns:
-        allOf:
-          - $ref: '../../variables.yaml#/$shortcode_columns'
-          - enum:
-              - "До центра"
-              - "Отель"
-              - "Звездность"
-              - "Рейтинг"
-              - "Цена за ночь, от"
-              - "Кнопка"
-      button_text:
-        allOf:
-          - $ref: '../../variables.yaml#/$button_text'
-          - default: "View Hotel %{price}"
-      sort_by:
-        allOf:
-          - $ref: '../../variables.yaml#/$sort_by'
-          - enum:
-              - "Старая и новая цена"
-              - "Дата возвращения"
-              - "Пересадки"
-              - "Номер рейса"
-              - "Рейс"
-              - "Стоимость"
-      use_pagination:
-        allOf:
-          - $ref: '../../variables.yaml#/$use_pagination'
-          - default: false
-      pagination_size:
-        allOf:
-          - $ref: '../../variables.yaml#/$pagination_size'
-          - default: "10"
-      additional_marker:
-        allOf:
-          - $ref: '../../variables.yaml#/$additionalMarker'
-          - default: 'calMonth'
-      apply_to_all_tables:
-        allOf:
-          - $ref: '../../variables.yaml#/$apply_to_all_tables'
-          - default: false
+  type: object
+  description: 'Виджеты отелей'
+  properties:
+    tp_widget_hotels_selections_discount_shortcodes:
+      type: "object"
+      properties:
+        title:
+          allOf:
+            - $ref: '../../variables.yaml#/$headerText'
+            - default: "Цены на авиабилеты в одну сторону из %{origin} в %{destination}, на ближайшее"
+        title_tag:
+          $ref: '../../variables.yaml#/$title_tags'
+        columns:
+          allOf:
+            - $ref: '../../variables.yaml#/$shortcode_columns'
+            - enum:
+                - "Цена за ночь, от"
+                - "Старая цена и скидка"
+                - "До центра"
+                - "Цена до скидки"
+                - "Рейтинг"
+                - "Отель"
+                - "Звездность"
+                - "Скидка"
+                - "Старая и новая цена"
+                - "Кнопка"
+        button_text:
+          allOf:
+            - $ref: '../../variables.yaml#/$button_text'
+            - default: "Посмотреть отель"
+        assign_dates:
+          allOf:
+            - $ref: '../../variables.yaml#/$assign_dates'
+            - default: false
+        sort_by:
+          allOf:
+            - $ref: '../../variables.yaml#/$sort_by'
+            - enum:
+                - "Старая и новая цена"
+                - "Дата возвращения"
+                - "Пересадки"
+                - "Номер рейса"
+                - "Рейс"
+                - "Стоимость"
+        use_pagination:
+          allOf:
+            - $ref: '../../variables.yaml#/$use_pagination'
+            - default: false
+        pagination_size:
+          allOf:
+            - $ref: '../../variables.yaml#/$pagination_size'
+            - default: "10"
+        additional_marker:
+          allOf:
+            - $ref: '../../variables.yaml#/$additionalMarker'
+            - default: "hotelsSelections"
+        apply_to_all_tables:
+          allOf:
+            - $ref: '../../variables.yaml#/$apply_to_all_tables'
+            - default: false
+    tp_widget_hotels_selections_date_shortcodes:
+      type: "object"
+      properties:
+        title:
+          allOf:
+            - $ref: '../../variables.yaml#/$headerText'
+            - default: "Цены на авиабилеты в одну сторону из %{origin} в %{destination}, на ближайшее"
+        title_tag:
+          $ref: '../../variables.yaml#/$title_tags'
+        columns:
+          allOf:
+            - $ref: '../../variables.yaml#/$shortcode_columns'
+            - enum:
+                - "До центра"
+                - "Отель"
+                - "Звездность"
+                - "Рейтинг"
+                - "Цена за ночь, от"
+                - "Кнопка"
+        button_text:
+          allOf:
+            - $ref: '../../variables.yaml#/$button_text'
+            - default: "View Hotel %{price}"
+        sort_by:
+          allOf:
+            - $ref: '../../variables.yaml#/$sort_by'
+            - enum:
+                - "Старая и новая цена"
+                - "Дата возвращения"
+                - "Пересадки"
+                - "Номер рейса"
+                - "Рейс"
+                - "Стоимость"
+        use_pagination:
+          allOf:
+            - $ref: '../../variables.yaml#/$use_pagination'
+            - default: false
+        pagination_size:
+          allOf:
+            - $ref: '../../variables.yaml#/$pagination_size'
+            - default: "10"
+        additional_marker:
+          allOf:
+            - $ref: '../../variables.yaml#/$additionalMarker'
+            - default: 'calMonth'
+        apply_to_all_tables:
+          allOf:
+            - $ref: '../../variables.yaml#/$apply_to_all_tables'
+            - default: false
