--- a/shortcodes/search.yaml
+++ b/shortcodes/search.yaml
@@ -10,14 +10,14 @@ paths:
         200:
           description: "Получаем array of objects для таблицы Управление шорткодами"
           schema:
-            $ref: '#/models/tp_search_form_shortcodes'
+            $ref: '#/models/properties/tp_search_form_shortcodes'
     delete:
       tags: *searchFormTags
       responses:
         200:
           description: "Удаляет выбранные шорткоды *schema?"
           schema:
-            $ref: '#/models/tp_search_form_shortcodes'
+            $ref: '#/models/properties/tp_search_form_shortcodes'
       parameters:
         - in: "body"
           name: "ids"
@@ -44,7 +44,7 @@ paths:
           name: "body"
           required: true
           schema:
-            $ref: "#/models/tp_search_form_add_shortcode"
+            $ref: "#/models/properties/tp_search_form_add_shortcode"
   search_forms_edit:
     put:
       tags: *searchFormTags
@@ -65,37 +65,40 @@ paths:
           name: "body"
           required: true
           schema:
-            $ref: "#/models/tp_search_form_add_shortcode"
+            $ref: "#/models/properties/tp_search_form_add_shortcode"
 
 models:
-  tp_search_form_add_shortcode:
-    type: "object"
-    properties:
-      id:
-        type: "integer"
-        description: "Id шорткода (hidden)"
-      name:
-        type: "string"
-        description: "Название (Введите название для формы)"
-        format: "input"
-      form_code:
-        type: "string"
-        description: "Код формы TravelPayouts (Введите домен, настроенный в Travelpayouts)"
-        format: "textarea"
-      city_departure:
-        type: "string"
-        description: "Локация - Город вылета (Введите домен, настроенный в Travelpayouts)"
-        format: "input"
-      city_arrive:
-        type: "string"
-        description: "Локация - Город прилета (Введите домен, настроенный в Travelpayouts)"
-        format: "input"
-      city_residence:
-        type: "string"
-        description: "Локация - Город проживания (Введите домен, настроенный в Travelpayouts)"
-        format: "input"
+  type: object
+  description: 'Поисковые формы'
+  properties:
+    tp_search_form_add_shortcode:
+      type: "object"
+      properties:
+        id:
+          type: "integer"
+          description: "Id шорткода (hidden)"
+        name:
+          type: "string"
+          description: "Название (Введите название для формы)"
+          format: "input"
+        form_code:
+          type: "string"
+          description: "Код формы TravelPayouts (Введите домен, настроенный в Travelpayouts)"
+          format: "textarea"
+        city_departure:
+          type: "string"
+          description: "Локация - Город вылета (Введите домен, настроенный в Travelpayouts)"
+          format: "input"
+        city_arrive:
+          type: "string"
+          description: "Локация - Город прилета (Введите домен, настроенный в Travelpayouts)"
+          format: "input"
+        city_residence:
+          type: "string"
+          description: "Локация - Город проживания (Введите домен, настроенный в Travelpayouts)"
+          format: "input"
 
-  tp_search_form_shortcodes:
-    type: "array"
-    items:
-      $ref: "#/models/tp_search_form_add_shortcode"
+    tp_search_form_shortcodes:
+      type: "array"
+      items:
+        $ref: "#/models/properties/tp_search_form_add_shortcode"
